packages/first-app-http/snapshots/inputs.example/000-deployment-first-app-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app-http
  labels:
    app.kubernetes.io/name: first-app-http
    app.kubernetes.io/part-of: first-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: first-app-http
      app.kubernetes.io/part-of: first-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: first-app-http
        app.kubernetes.io/part-of: first-app
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: http
        image: nginxinc/nginx-unprivileged@sha256:65e3e85dbaed8ba248841d9d58a899b6197106c23cb0ff1a132b7bfe0547e4c0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
