packages/first-app-http/snapshots/inputs.example/001-service-first-app-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-app-http
  labels:
    app.kubernetes.io/name: first-app-http
    app.kubernetes.io/part-of: first-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: first-app-http
    app.kubernetes.io/part-of: first-app
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
